# native-exposer

./: .gitignore  NativeExposer.sln  README.md
docs/: Mangling.md
managed/: NativeExposer.csproj  StubGenerator.cs  SymbolExtension.cs
native/: Args.cs  CodeWriter.cs  NativeExposer.Build.csproj  Program.cs  Progress.cs  Resources.cs  TaskExtension.cs  TimeFormatter.cs
native/Resources/: CMakeLists.txt  lib.cxx  lib.h
test/: .gitignore  Foo.cs  NativeExposer.Test.csproj
